<resources>
    <string name="app_name">TodoApp</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SignUp</string>
    <string name="circles">Circles</string>
    <string name="human">Human</string>

</resources>